sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple expression
	var swapped = true
        ^AlgBubbleSort1:17: error: ')' expected but '}' found.
}
^